Logical Properties and Badges

--- a/sass/components/breadcrumb.sass
+++ b/sass/components/breadcrumb.sass
@@ -54,6 +54,10 @@ $breadcrumb-item-separator-color: $border-hover !default
   &.is-right
     ol,
     ul
+      justify-content: right
+  &.is-block-end
+    ol,
+    ul
       justify-content: flex-end
   // Sizes
   &.is-small
