--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -30,11 +30,15 @@ $card-media-margin: $block-spacing !default
 
 %card-item
   &:first-child
-    border-top-left-radius: $card-radius
-    border-top-right-radius: $card-radius
+    // Top Left
+    border-start-start-radius: $card-radius
+    // Top Right
+    border-start-end-radius: $card-radius
   &:last-child
-    border-bottom-left-radius: $card-radius
-    border-bottom-right-radius: $card-radius
+    // Bottom Left
+    border-end-start-radius: $card-radius
+    // Bottom Right
+    border-end-end-radius: $card-radius
 
 .card-header
   @extend %card-item
@@ -66,12 +70,16 @@ $card-media-margin: $block-spacing !default
   position: relative
   &:first-child
     img
-      border-top-left-radius: $card-radius
-      border-top-right-radius: $card-radius
+      // Top Left
+      border-start-start-radius: $card-radius
+      // Top Right
+      border-start-end-radius: $card-radius
   &:last-child
     img
-      border-bottom-left-radius: $card-radius
-      border-bottom-right-radius: $card-radius
+      // Bottom Left
+      border-end-start-radius: $card-radius
+      // Bottom Right
+      border-end-end-radius: $card-radius
 
 .card-content
   @extend %card-item
