--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -31,6 +31,10 @@ $dropdown-divider-background-color: $border-light !default
     .dropdown-menu
       left: auto
       right: 0
+  &.is-block-end
+    .dropdown-menu
+      inset-inline-start: auto
+      inset-inline-end: 0
   &.is-up
     .dropdown-menu
       bottom: 100%
