--- a/sass/components/media.sass
+++ b/sass/components/media.sass
@@ -36,16 +36,22 @@ $media-level-2-spacing: 0.5rem !default
       margin-top: $media-spacing-large
       padding-top: $media-spacing-large
 
-.media-left,
-.media-right
+.media-left, .media-start,
+.media-right, .media-end
   flex-basis: auto
   flex-grow: 0
   flex-shrink: 0
 
 .media-left
-  +ltr-property("margin", $media-spacing)
+  margin-right: $media-spacing
 
 .media-right
+  margin-left: $media-spacing
+
+.media-start
+  +ltr-property("margin", $media-spacing)
+
+.media-end 
   +ltr-property("margin", $media-spacing, false)
 
 .media-content
