--- a/sass/components/message.sass
+++ b/sass/components/message.sass
@@ -70,7 +70,10 @@ $message-colors: $colors !default
 .message-header
   align-items: center
   background-color: $message-header-background-color
-  border-radius: $message-header-radius $message-header-radius 0 0
+  // Top Left
+  border-start-start-radius: $message-header-radius
+  // Top Right
+  border-start-end-radius: $message-header-radius
   color: $message-header-color
   display: flex
   font-weight: $message-header-weight
@@ -84,8 +87,10 @@ $message-colors: $colors !default
     +ltr-property("margin", 0.75em, false)
   & + .message-body
     border-width: $message-header-body-border-width
-    border-top-left-radius: 0
-    border-top-right-radius: 0
+    // Top Left
+    border-start-start-radius: 0
+    // Top Right
+    border-start-end-radius: 0
 
 .message-body
   border-color: $message-body-border-color
