--- a/sass/components/modal.sass
+++ b/sass/components/modal.sass
@@ -90,8 +90,10 @@ $modal-breakpoint: $tablet !default
 
 .modal-card-head
   border-bottom: $modal-card-head-border-bottom
-  border-top-left-radius: $modal-card-head-radius
-  border-top-right-radius: $modal-card-head-radius
+  // Top Left
+  border-start-start-radius: $modal-card-head-radius
+  // Top Right
+  border-start-end-radius: $modal-card-head-radius
 
 .modal-card-title
   color: $modal-card-title-color
@@ -101,8 +103,10 @@ $modal-breakpoint: $tablet !default
   line-height: $modal-card-title-line-height
 
 .modal-card-foot
-  border-bottom-left-radius: $modal-card-foot-radius
-  border-bottom-right-radius: $modal-card-foot-radius
+  // Bottom Left
+  border-end-start-radius: $modal-card-foot-radius
+  // Bottom Right
+  border-end-end-radius: $modal-card-foot-radius
   border-top: $modal-card-foot-border-top
   .button
     &:not(:last-child)
