--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -98,13 +98,18 @@ $panel-colors: $colors !default
   &.is-wrapped
     flex-wrap: wrap
   &.is-active
-    border-left-color: $panel-block-active-border-left-color
+    // Top Left
+    border-start-start-color: $panel-block-active-border-left-color
+    // Bottom Left
+    border-end-start-color: $panel-block-active-border-left-color
     color: $panel-block-active-color
     .panel-icon
       color: $panel-block-active-icon-color
   &:last-child
-    border-bottom-left-radius: $panel-radius
-    border-bottom-right-radius: $panel-radius
+    // Bottom Left
+    border-end-start-radius: $panel-radius
+    // Bottom Right
+    border-end-end-radius: $panel-radius
 
 a.panel-block,
 label.panel-block
