--- a/sass/elements/container.sass
+++ b/sass/elements/container.sass
@@ -10,8 +10,7 @@ $container-max-width: $fullhd !default
   width: auto
   &.is-fluid
     max-width: none !important
-    padding-left: $gap
-    padding-right: $gap
+    padding-inline: $gap
     width: 100%
   +desktop
     max-width: $desktop - $container-offset
