--- a/sass/elements/content.sass
+++ b/sass/elements/content.sass
@@ -100,8 +100,7 @@ $content-table-foot-cell-color: $text-strong !default
   dd
     +ltr-property("margin", 2em, false)
   figure
-    margin-left: 2em
-    margin-right: 2em
+    margin-inline: 2em
     text-align: center
     &:not(:first-child)
       margin-top: 2em
