--- a/sass/form/input-textarea.sass
+++ b/sass/form/input-textarea.sass
@@ -40,14 +40,12 @@ $textarea-colors: $form-colors !default
   @extend %input-textarea
   &.is-rounded
     border-radius: $radius-rounded
-    padding-left: calc(#{$control-padding-horizontal} + 0.375em)
-    padding-right: calc(#{$control-padding-horizontal} + 0.375em)
+    padding-inline: calc(#{$control-padding-horizontal} + 0.375em)
   &.is-static
     background-color: transparent
     border-color: transparent
     box-shadow: none
-    padding-left: 0
-    padding-right: 0
+    padding-inline: 0
 
 .textarea
   @extend %input-textarea
