--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -479,8 +479,7 @@ $column-gap: 0.75rem !default
     +ltr-property("margin", calc(-1 * var(--columnGap)), false)
     +ltr-property("margin", calc(-1 * var(--columnGap)))
     > .column
-      padding-left: var(--columnGap)
-      padding-right: var(--columnGap)
+      padding-inline: var(--columnGap)
     @for $i from 0 through 8
       &.is-#{$i}
         --columnGap: #{$i * 0.25rem}
