--- a/sass/grid/tiles.sass
+++ b/sass/grid/tiles.sass
@@ -11,8 +11,7 @@ $tile-spacing: 0.75rem !default
   min-height: min-content
   // Modifiers
   &.is-ancestor
-    margin-left: $tile-spacing * -1
-    margin-right: $tile-spacing * -1
+    margin-inline: $tile-spacing * -1
     margin-top: $tile-spacing * -1
     &:last-child
       margin-bottom: $tile-spacing * -1
