--- a/sass/utilities/controls.sass
+++ b/sass/utilities/controls.sass
@@ -23,10 +23,8 @@ $control-padding-horizontal: calc(0.75em - #{$control-border-width}) !default
   height: $control-height
   justify-content: flex-start
   line-height: $control-line-height
-  padding-bottom: $control-padding-vertical
-  padding-left: $control-padding-horizontal
-  padding-right: $control-padding-horizontal
-  padding-top: $control-padding-vertical
+  padding-block: $control-padding-vertical
+  padding-inline: $control-padding-horizontal
   position: relative
   vertical-align: top
   // States
