--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -69,10 +69,8 @@ $button-responsive-sizes: ("mobile": ("small": ($size-small * 0.75), "normal": (
   @if $button-family
     font-family: $button-family
   justify-content: center
-  padding-bottom: $button-padding-vertical
-  padding-left: $button-padding-horizontal
-  padding-right: $button-padding-horizontal
-  padding-top: $button-padding-vertical
+  padding-inline: $button-padding-horizontal
+  padding-block: $button-padding-vertical
   text-align: center
   white-space: nowrap
   strong
@@ -91,8 +89,7 @@ $button-responsive-sizes: ("mobile": ("small": ($size-small * 0.75), "normal": (
       +ltr-property("margin", $button-padding-horizontal * 0.25, false)
       +ltr-property("margin", calc(#{-0.5 * $button-padding-horizontal} - #{$button-border-width}))
     &:first-child:last-child
-      margin-left: calc(#{-0.5 * $button-padding-horizontal} - #{$button-border-width})
-      margin-right: calc(#{-0.5 * $button-padding-horizontal} - #{$button-border-width})
+      margin-inline: calc(#{-0.5 * $button-padding-horizontal} - #{$button-border-width})
   // States
   &:hover,
   &.is-hovered
@@ -281,8 +278,7 @@ $button-responsive-sizes: ("mobile": ("small": ($size-small * 0.75), "normal": (
     pointer-events: none
   &.is-rounded
     border-radius: $radius-rounded
-    padding-left: calc(#{$button-padding-horizontal} + 0.25em)
-    padding-right: calc(#{$button-padding-horizontal} + 0.25em)
+    padding-inline: calc(#{$button-padding-horizontal} + 0.25em)
 
 .buttons
   align-items: center
@@ -310,11 +306,15 @@ $button-responsive-sizes: ("mobile": ("small": ($size-small * 0.75), "normal": (
   &.has-addons
     .button
       &:not(:first-child)
-        border-bottom-left-radius: 0
-        border-top-left-radius: 0
+        // Top Left
+        border-start-start-radius: 0
+        // Bottom Left
+        border-end-start-radius: 0
       &:not(:last-child)
-        border-bottom-right-radius: 0
-        border-top-right-radius: 0
+        // Top Right
+        border-start-end-radius: 0
+        // Bottom Right
+        border-end-end-radius: 0
         +ltr-property("margin", -1px)
       &:last-child
         +ltr-property("margin", 0)
@@ -336,14 +336,17 @@ $button-responsive-sizes: ("mobile": ("small": ($size-small * 0.75), "normal": (
     justify-content: center
     &:not(.has-addons)
       .button:not(.is-fullwidth)
-        margin-left: 0.25rem
-        margin-right: 0.25rem
+        margin-inline: 0.25rem
   &.is-right
+    justify-content: right
+    &:not(.has-addons)
+      .button:not(.is-fullwidth)
+        margin-inline: 0.25rem
+  &.is-block-end
     justify-content: flex-end
     &:not(.has-addons)
       .button:not(.is-fullwidth)
-        margin-left: 0.25rem
-        margin-right: 0.25rem
+        margin-inline: 0.25rem
 
 @each $bp-name, $bp-sizes in $button-responsive-sizes
   +breakpoint($bp-name)
