--- a/sass/elements/icon.sass
+++ b/sass/elements/icon.sass
@@ -32,15 +32,9 @@ $icon-text-spacing: 0.25em !default
     flex-grow: 0
     flex-shrink: 0
     &:not(:last-child)
-      +ltr
-        margin-right: $icon-text-spacing
-      +rtl
-        margin-left: $icon-text-spacing
+      +ltr-property("margin", $icon-text-spacing)
     &:not(:first-child)
-      +ltr
-        margin-left: $icon-text-spacing
-      +rtl
-        margin-right: $icon-text-spacing
+      +ltr-property("margin", $icon-text-spacing, false)
 
 div.icon-text
   display: flex
