--- a/sass/elements/other.sass
+++ b/sass/elements/other.sass
@@ -17,15 +17,4 @@
   @extend %loader
 
 .number
-  align-items: center
-  background-color: $background
-  border-radius: $radius-rounded
-  display: inline-flex
-  font-size: $size-medium
-  height: 2em
-  justify-content: center
-  margin-right: 1.5rem
-  min-width: 2.5em
-  padding: 0.25rem 0.5rem
-  text-align: center
-  vertical-align: top
+  @extend %number
