--- a/sass/form/tools.sass
+++ b/sass/form/tools.sass
@@ -50,22 +50,18 @@ $label-colors: $form-colors !default
         .button,
         .input,
         .select select
-          +ltr
-            border-bottom-right-radius: 0
-            border-top-right-radius: 0
-          +rtl
-            border-bottom-left-radius: 0
-            border-top-left-radius: 0
+          // Top Right
+          border-start-end-radius: 0
+          // Bottom Right
+          border-end-end-radius: 0
       &:last-child:not(:only-child)
         .button,
         .input,
         .select select
-          +ltr
-            border-bottom-left-radius: 0
-            border-top-left-radius: 0
-          +rtl
-            border-bottom-right-radius: 0
-            border-top-right-radius: 0
+          // Top Left
+          border-start-start-radius: 0
+          // Bottom Left
+          border-end-start-radius: 0
       .button,
       .input,
       .select select
@@ -168,7 +164,9 @@ $label-colors: $form-colors !default
   text-align: inherit
   // Modifiers
   &.has-icons-left,
-  &.has-icons-right
+  &.has-icons-right,
+  &.has-icons-start,
+  &.has-icons-end
     .input,
     .select
       &:focus
@@ -200,6 +198,18 @@ $label-colors: $form-colors !default
       padding-right: $input-height
     .icon.is-right
       right: 0
+  &.has-icons-start
+    .input,
+    .select select
+      padding-inline-start: $input-height
+    .icon.is-start
+      inset-inline-start: 0
+  &.has-icons-end
+    .input,
+    .select select
+      padding-inline-end: $input-height
+    .icon.is-end
+      inset-inline-end: 0
   &.is-loading
     &::after
       @extend %loader
