badge default position

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -491,6 +491,8 @@ table th {
   padding: 0.15em 0.35em;
   height: 1.5em;
   position: absolute;
+  inset-block-start: -0.6em;
+  inset-inline-end: -0.6em;
 }
 
 .badge.is-top-left {
