--- a/sass/elements/badge.sass
+++ b/sass/elements/badge.sass
@@ -13,6 +13,8 @@ $badge-positions: ("top-left": ("top", "left"), "top-right": ("top", "right"), "
   padding: 0.15em 0.35em
   height: $badge-size
   position: absolute
+  inset-block-start: $badge-size * $badge-location * -1
+  inset-inline-end: $badge-size * $badge-location * -1
   @each $position, $properties in $badge-positions
     &.is-#{$position}
       @each $direction in $properties
