badge empty size

--- a/sass/elements/badge.sass
+++ b/sass/elements/badge.sass
@@ -15,6 +15,9 @@ $badge-positions: ("top-left": ("top", "left"), "top-right": ("top", "right"), "
   position: absolute
   inset-block-start: $badge-size * $badge-location * -1
   inset-inline-end: $badge-size * $badge-location * -1
+  &:empty 
+    min-width: 10px
+    height: 10px
   @each $position, $properties in $badge-positions
     &.is-#{$position}
       @each $direction in $properties
