fix badge position bug

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -495,42 +495,63 @@ table th {
   inset-inline-end: -0.6em;
 }
 
+.badge:empty {
+  min-width: 10px;
+  height: 10px;
+}
+
 .badge.is-top-left {
+  inset-block-start: initial;
+  inset-inline-end: initial;
   top: -0.6em;
   left: -0.6em;
 }
 
 .badge.is-top-right {
+  inset-block-start: initial;
+  inset-inline-end: initial;
   top: -0.6em;
   right: -0.6em;
 }
 
 .badge.is-bottom-right {
+  inset-block-start: initial;
+  inset-inline-end: initial;
   bottom: -0.6em;
   right: -0.6em;
 }
 
 .badge.is-bottom-left {
+  inset-block-start: initial;
+  inset-inline-end: initial;
   bottom: -0.6em;
   left: -0.6em;
 }
 
 .badge.is-start-start {
+  inset-block-start: initial;
+  inset-inline-end: initial;
   inset-block-start: -0.6em;
   inset-inline-start: -0.6em;
 }
 
 .badge.is-start-end {
+  inset-block-start: initial;
+  inset-inline-end: initial;
   inset-block-start: -0.6em;
   inset-inline-end: -0.6em;
 }
 
 .badge.is-end-start {
+  inset-block-start: initial;
+  inset-inline-end: initial;
   inset-block-end: -0.6em;
   inset-inline-start: -0.6em;
 }
 
 .badge.is-end-end {
+  inset-block-start: initial;
+  inset-inline-end: initial;
   inset-block-end: -0.6em;
   inset-inline-end: -0.6em;
 }
