--- a/sass/elements/badge.sass
+++ b/sass/elements/badge.sass
@@ -20,6 +20,8 @@ $badge-positions: ("top-left": ("top", "left"), "top-right": ("top", "right"), "
     height: 10px
   @each $position, $properties in $badge-positions
     &.is-#{$position}
+      inset-block-start: initial
+      inset-inline-end: initial
       @each $direction in $properties
         #{$direction}: $badge-size * $badge-location * -1
   @each $name, $pair in $badge-colors
